Added mem leak