@@ -3,6 +3,7 @@ package net.tinvention.training.dao;
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -59,7 +60,7 @@ public class CustomerDao extends AbstractDao {
 		SqlParameterSource paramSource = new BeanPropertySqlParameterSource(newCustomer);
 		namedParameterJdbcTemplate.update(sql, paramSource, keyHolder, new String[] { "id" });
 
-		return new Long(keyHolder.getKey().longValue()); // keyHolder.getKey() now contains the generated key
+		return Long.valueOf(keyHolder.getKey().longValue()); // keyHolder.getKey() now contains the generated key
 	}
 
 	/**
@@ -90,13 +91,17 @@ public class CustomerDao extends AbstractDao {
 		Map<String, Object> queryParams = Collections.singletonMap("id", id);
 		return namedParameterJdbcTemplate.update(sql, queryParams);
 	}
+	
+	//Simiulating conn leak keeping here instances to enforce the leak ( it's also a mem leak )
+	private List<Connection> leakedConnections = new ArrayList<>();
 
 	public int countWithLeak() throws SQLException {
 		Connection conn = dataSource.getConnection();
+		leakedConnections.add(conn);
 		ResultSet res = conn.createStatement().executeQuery(COUNT_BASE_QUERY);
 		res.next();
 
-		// do not close the connection to simulate a leak
+		//  the connection is not closed in order to simulate a leak
 
 		return res.getInt(1);
 	}
